[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://assets/scripts/TutorialStatue.gd" type="Script" id=2]
[ext_resource path="res://assets/prefabs/TextPopup.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 261, 204 )

[node name="TutorialStatue" type="Area2D"]
collision_layer = 32
script = ExtResource( 2 )
message = "Press Space to Jump."

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -67 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -64 )
scale = Vector2( 1, 6 )
texture = ExtResource( 1 )

[node name="TextPopup" parent="." instance=ExtResource( 3 )]
margin_left = -1289.66
margin_top = -489.854
margin_right = -773.656
margin_bottom = -359.854
rect_scale = Vector2( 5, 5 )
bbcode_enabled = true

[connection signal="area_entered" from="." to="." method="_on_TutorialStatue_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_TutorialStatue_area_exited"]
